fix: address remaining PR #10 review issues for release readiness
Docker/Deployment:
- Add entrypoint-node.sh for proper signal handling in containers
- Add HEALTHCHECK instructions to all Dockerfiles
- Pin Memgraph to version 2.15.1
- Enhance network configuration documentation

Dependencies:
- Update omnibase-core to ^0.8.0 (required by omnibase-infra)
- Align PEP 621 version constraints with Poetry caret syntax
- Add missing dev dependencies to 'all' group

Models & Type Safety:
- Replace dict[str, Any] with EntityMetadataDict/RelationshipMetadataDict
- Add ModelQualityScoringMetadata typed class
- Fix ingestion_effect return type annotations

Nodes:
- Add FSM type enum documentation to intelligence_reducer contract
- Clarify terminal state semantics in reducer contract
- Track TODO placeholders with issue references
- Reduce stub warning verbosity for repeated calls

Utils/Tools:
- Remove duplicate data.get() call in contract_linter
- Add VERSION_FIELDS documentation in contract_validator
- Fix unused noqa directives

Documentation:
- Update migration checklist with all required node artifacts
- Add ONEX naming convention examples
- Update document metadata dates

--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -48,10 +48,19 @@ ENV OMNIINTELLIGENCE_ALLOW_DEFAULT_KAFKA=true
 # Expose health check port
 EXPOSE 8000
 
+# Copy and setup entrypoint script for proper signal handling
+COPY deployment/docker/entrypoint-node.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# Health check - verifies the node's HTTP health endpoint is responding
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
 # Run reducer (canonical module path - no v1_0_0 versioning)
 # Note: Runs in stub mode with health checks; full functionality requires
 # ONEX container injection via RuntimeHostProcess
-CMD ["python", "-m", "omniintelligence.nodes.intelligence_reducer"]
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["reducer"]
 
 # ============================================================================
 # Stage 3: Orchestrator
@@ -67,10 +76,19 @@ ENV OMNIINTELLIGENCE_ALLOW_DEFAULT_KAFKA=true
 # Expose health check port
 EXPOSE 8000
 
+# Copy and setup entrypoint script for proper signal handling
+COPY deployment/docker/entrypoint-node.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# Health check - verifies the node's HTTP health endpoint is responding
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
 # Run orchestrator (canonical module path - no v1_0_0 versioning)
 # Note: Runs in stub mode with health checks; full functionality requires
 # ONEX container injection via RuntimeHostProcess
-CMD ["python", "-m", "omniintelligence.nodes.intelligence_orchestrator"]
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["orchestrator"]
 
 # ============================================================================
 # Stage 4: Compute Node (generic)
@@ -88,10 +106,19 @@ ENV OMNIINTELLIGENCE_ALLOW_DEFAULT_KAFKA=true
 # Expose health check port
 EXPOSE 8000
 
+# Copy and setup entrypoint script for proper signal handling
+COPY deployment/docker/entrypoint-node.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# Health check - verifies the node's HTTP health endpoint is responding
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
 # Run compute node (canonical module path - no v1_0_0 versioning)
 # Note: Runs in stub mode with health checks; full functionality requires
 # ONEX container injection via RuntimeHostProcess
-CMD ["sh", "-c", "python -m omniintelligence.nodes.${NODE_NAME}"]
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["compute"]
 
 # ============================================================================
 # Stage 5: Effect Node (generic)
@@ -109,10 +136,19 @@ ENV OMNIINTELLIGENCE_ALLOW_DEFAULT_KAFKA=true
 # Expose health check port
 EXPOSE 8000
 
+# Copy and setup entrypoint script for proper signal handling
+COPY deployment/docker/entrypoint-node.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# Health check - verifies the node's HTTP health endpoint is responding
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
 # Run effect node (canonical module path - no v1_0_0 versioning)
 # Note: Runs in stub mode with health checks; full functionality requires
 # ONEX container injection via RuntimeHostProcess
-CMD ["sh", "-c", "python -m omniintelligence.nodes.${NODE_NAME}"]
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["effect"]
 
 # ============================================================================
 # Stage 6: Development/Testing
