--- a/deployment/docker/Dockerfile.compute
+++ b/deployment/docker/Dockerfile.compute
@@ -28,7 +28,25 @@ ENV OMNIINTELLIGENCE_ALLOW_DEFAULT_KAFKA=true
 # Expose health check port
 EXPOSE 8000
 
+# ============================================================================
+# Signal Handling Note
+# ============================================================================
+# Using ENTRYPOINT with exec form ensures proper signal propagation to the
+# Python process. The entrypoint script uses 'exec' to replace the shell
+# process with the Python interpreter, allowing SIGTERM/SIGINT to reach
+# the application directly for graceful shutdown.
+# ============================================================================
+
+# Copy entrypoint script
+COPY deployment/docker/entrypoint-node.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# Health check - verifies the node's HTTP health endpoint is responding
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
 # Run compute node (canonical module path - no v1_0_0 versioning)
 # Note: Runs in stub mode with health checks; full functionality requires
 # ONEX container injection via RuntimeHostProcess
-CMD ["sh", "-c", "python -m omniintelligence.nodes.${NODE_NAME}"]
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["compute"]
