--- a/deployment/docker/Dockerfile.orchestrator
+++ b/deployment/docker/Dockerfile.orchestrator
@@ -26,8 +26,26 @@ ENV OMNIINTELLIGENCE_ALLOW_DEFAULT_KAFKA=true
 # Expose health check port
 EXPOSE 8000
 
+# ============================================================================
+# Signal Handling Note
+# ============================================================================
+# Using ENTRYPOINT with exec form ensures proper signal propagation to the
+# Python process. The entrypoint script uses 'exec' to replace the shell
+# process with the Python interpreter, allowing SIGTERM/SIGINT to reach
+# the application directly for graceful shutdown.
+# ============================================================================
+
+# Copy entrypoint script
+COPY deployment/docker/entrypoint-node.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# Health check - verifies the node's HTTP health endpoint is responding
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
 # Run orchestrator
 # Note: This runs the canonical orchestrator node (not the legacy v1_0_0 version)
 # The node runs in stub mode with health checks; full functionality requires
 # ONEX container injection via RuntimeHostProcess
-CMD ["python", "-m", "omniintelligence.nodes.intelligence_orchestrator"]
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["orchestrator"]
