--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -130,9 +130,15 @@ services:
   # ============================================================================
   # Memgraph - Knowledge Graph (Entities + Relationships)
   # ============================================================================
+  # Version Note: Pinned to 2.15.1 for reproducibility. This version includes:
+  #   - Cypher 11 support
+  #   - Improved query performance
+  #   - Stable Bolt protocol implementation
+  # Update this version after testing with your data model.
+  # ============================================================================
 
   memgraph:
-    image: memgraph/memgraph-platform:latest
+    image: memgraph/memgraph-platform:2.15.1
     container_name: omni-memgraph
     ports:
       - "${MEMGRAPH_PORT:-7687}:7687"  # Bolt protocol (Cypher queries)
