--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,10 +49,45 @@ factory-boy = ">=3.3.0"
 pre-commit = ">=4.5.0"
 
 [tool.poetry.group.core.dependencies]
-# omnibase-infra 0.2.1 requires omnibase-core>=0.8.0, so we pin to ^0.8.0
+# ONEX ecosystem dependencies
+# Note: omnibase-infra 0.2.1 requires omnibase-core>=0.8.0, so we pin to ^0.8.0
+# Version constraints use caret syntax: ^0.8.0 = >=0.8.0,<0.9.0
 omnibase-core = "^0.8.0"
 omnibase-spi = "^0.5.0"
 omnibase-infra = "^0.2.1"
+# Web framework for API endpoints
+fastapi = ">=0.104.0"
+uvicorn = ">=0.24.0"
+python-multipart = ">=0.0.20"
+# Event bus (Kafka/Redpanda)
+aiokafka = ">=0.10.0"
+confluent-kafka = ">=2.6.0"
+# Vector database
+qdrant-client = ">=1.15.1"
+# Graph database
+neo4j = ">=5.28.2"
+# PostgreSQL
+asyncpg = ">=0.29.0"
+# Document processing
+pypdf2 = ">=3.0.1"
+pdfplumber = ">=0.11.6"
+python-docx = ">=1.1.2"
+markdown = ">=3.8"
+# AI/ML and Workflow Orchestration
+openai = ">=1.71.0"
+llama-index = ">=0.12.0"
+sentence-transformers = ">=4.1.0"
+torch = ">=2.0.0"
+transformers = ">=4.30.0"
+# Utilities
+tenacity = ">=8.2.0"
+cachetools = ">=5.3.0"
+redis = {extras = ["hiredis"], version = ">=5.0.0"}
+# Logging and monitoring
+logfire = ">=0.30.0"
+structlog = ">=23.1.0"
+prometheus-client = ">=0.19.0"
+psutil = ">=5.9.0"
 
 [project]
 name = "omniintelligence"
@@ -121,8 +156,9 @@ core = [
     "pdfplumber>=0.11.6",
     "python-docx>=1.1.2",
     "markdown>=3.8",
-    # AI/ML
+    # AI/ML and Workflow Orchestration
     "openai>=1.71.0",
+    "llama-index>=0.12.0",
     "sentence-transformers>=4.1.0",
     "torch>=2.0.0",
     "transformers>=4.30.0",
@@ -158,6 +194,7 @@ all = [
     "python-docx>=1.1.2",
     "markdown>=3.8",
     "openai>=1.71.0",
+    "llama-index>=0.12.0",
     "sentence-transformers>=4.1.0",
     "torch>=2.0.0",
     "transformers>=4.30.0",
