fix: complete PR #10 release ready - all review issues addressed
CRITICAL fixes:
- Pattern matching compute returns typed ModelPatternMatchingOutput
- CONTRACT_CORRECTIONS.md import paths corrected

MAJOR fixes:
- Remove conflicting retries=0 from Kafka producer config (idempotence)
- Add CancelledError handling to event publisher and adapter
- Fix node stub outputs to return success=False consistently
- Remove guard condition in relationship_detection validation
- Enhance contract validator with version enforcement
- Update NODE_MAPPING_REFERENCE.md with accurate node inventory

MINOR fixes:
- Update ONEX_MIGRATION_PLAN.md: node inventory, naming conventions
- Update omniarchon_to_omniintelligence.md: test paths, checklist
- Add explicit TODO tracking in contract.yaml files

NITPICK fixes:
- Add UUID pattern validation to correlation_id fields
- Add Literal types for operation fields
- Improve all 7 node __main__.py with proper shutdown/signal handling
- Add ge=0 constraints to count fields in output models
- Fix unused variable in test_io_violations.py

Test results: 244 unit tests passed, 98 audit tests passed

--- a/src/omniintelligence/nodes/intent_classifier_compute/contract.yaml
+++ b/src/omniintelligence/nodes/intent_classifier_compute/contract.yaml
@@ -42,6 +42,9 @@ operations:
 # Issue: https://github.com/OmniNode-ai/omniintelligence/issues/15
 # See also: docs/migrations/omniarchon_to_omniintelligence.md (Phase 3 - Protocols)
 #
+# Priority: Low (current implementation functional without protocol abstraction)
+# Description: Create omniintelligence.protocols module with IntentClassifierProtocol
+#
 # When implemented:
 #   - Create omniintelligence.protocols.IntentClassifierProtocol
 #   - Define classify(), get_categories(), get_confidence() interface
